projects/vb6parse/snapshots/tests/library/financial/fv/fv_array_assignment.snap
---
source: projects/vb6parse/tests/library/financial/fv.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: CallExpression
          children:
            - kind: Identifier
              text: results
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: i
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Fv
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: simulatedRate
                        - kind: Whitespace
                          text: " "
                        - kind: DivisionOperator
                          text: /
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "12"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: years
                        - kind: Whitespace
                          text: " "
                        - kind: MultiplicationOperator
                          text: "*"
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "12"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: UnaryExpression
                      children:
                        - kind: SubtractionOperator
                          text: "-"
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: deposit
            - kind: RightParenthesis
              text: )
