projects/vb6parse/snapshots/tests/library/financial/fv/fv_no_payment.snap
---
source: projects/vb6parse/tests/library/financial/fv.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: futureValue
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Fv
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: NumericLiteralExpression
                          children:
                            - kind: SingleLiteral
                              text: "0.08"
                        - kind: Whitespace
                          text: " "
                        - kind: DivisionOperator
                          text: /
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "12"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "5"
                        - kind: Whitespace
                          text: " "
                        - kind: MultiplicationOperator
                          text: "*"
                        - kind: Whitespace
                          text: " "
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "12"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "0"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: lumpSum
            - kind: RightParenthesis
              text: )
